--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ output.mat
 Post Suite2p Processing/Testing/UAnnotations-CellROI-0.mat
 **/.DS_Store
 UAnnotations-dev_testing.mat
+data/manualRoiFilteringResults-12_04_2020_backup.mat
