--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ helpers/External/subtightplot/subtightplot_demo.png
 helpers/External/subtightplot/subtightplot_demo.ppt
 helpers/External/suplabel/suplabel_test.m
 helpers/External/suplabel/license.txt
+data/UAnnotations-CellROI-0.mat
