--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ helpers/External/subtightplot/subtightplot_demo.ppt
 helpers/External/suplabel/suplabel_test.m
 helpers/External/suplabel/license.txt
 data/UAnnotations-CellROI-0.mat
+helpers/External/FigureManager.m
+helpers/External/MouseManager-master
+helpers/External/clickable_legend
+helpers/External/figs2tabs
+helpers/External/knobslider-Class
